[package]
name = "redkar-chess-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chess_lib = { git = "https://github.com/INDA23PlusPlus/somasz-chess" }
chess-network-protocol = { git = "https://github.com/INDA23PlusPlus/chess-network-protocol" }
ggez = "0.9.3"
serde_json = "1.0.107"
serde = "1.0.188"
